# gaugeflow

./: .gitattributes  .gitignore  AGENTS.md  IDEA_AND_ROADMAP_ZH.md  PROJECT_HANDOFF.md  README.md  TECHNICAL_REVIEW_DOSSIER.md  UNCERTAINTY_TRANSFER_REVIEW.md  pyproject.toml  requirements-lock-wsl-cu124.txt  requirements-lock-wsl-h0c-cu124.txt
artifacts/: tensororbit_jarvis_v1_preprocessed_v1.pt.manifest.json
audit/: CODEX_VERIFICATION.md  README.md  architecture_traceability.md  commands_and_results.md  findings.md  test_coverage_and_gaps.md  training_readiness.md
configs/: gate_a10_site_representation_audit_v1.json  gate_a11_0_periodic_site_orbits_v1.json  gate_a11_q_exact_assignment_v1.json  gate_a11_stochastic_assignment_quotient_v1.json  gate_a1_causal_audit_v1.json  gate_a2_conditional_control_v1.json  gate_a3_early_branching_v1.json  gate_a4_generator_substrate_v1.json  gate_a5_quotient_substrate_v1.json  gate_a6_discrete_type_substrate_v1.json  gate_a7_joint_type_set_v1.json  gate_a8_time_conditioned_type_set_v1.json  gate_a9_source_weighted_type_set_v1.json  gate_a_v1.json  gate_h1_harmonic_conditioning_v1.json  gate_p3_independent_decoder_qualification_v1.json  gate_p4_matched_production_backbone_v1.json  gate_p5_c0_periodic_path_fixed_lift_v1.json  gate_p5_d0_1_fixed_batch_overfit_v1.json  gate_p5_d0_2_single_sample_overfit_v1.json  gate_p5_d0_3_translation_quotient_metric_v1.json  gate_p5_d0_4_fixed_source_full_trajectory_v1.json  gate_p5_d0_5_endpoint_bridge_metric_v1.json  gate_p5_d0_6_quotient_rollout_corrected_flow_map_v1.json  gate_p5_d0_7_multiscale_semigroup_flow_map_v1.json  gate_p5_d0_8_contractive_quotient_flow_map_v1.json  gate_p5_d0_unconditional_coordinate_v1.json  gate_p5_exact_synthetic_tensor_control_v1.json  hierarchical_symmetry_breaking_v1.json  paper_s0_2_scalability_symmetry_chart_v1.json  paper_s0_3_cartesian_atlas_v1.json  paper_s0_4_1_cartesian_atlas_runtime_v1.json  paper_s0_4_cartesian_atlas_prior_v1.json  substrate_v2_decoration_only_v1.json  substrate_v2_decoration_only_v2.json  substrate_v2_decoration_only_v3.json  synthetic_rank3_tensor_control_v1.json  tensororbit_jarvis_v2_oracle_qualification_v1.json  tensororbit_jarvis_v2_oracle_qualification_v2_full_o3.json  tensororbit_jarvis_v2_raw_build_v1.json  (+2 more)
docs/: assignment_law_design_v1.md  cartesian_stratified_gauge_atlas_v1.md  chart_consistent_fast_sampling.md  current_project_status_zh.md  gaugeflow_base_product_space_integration.md  gaugeflow_base_v2_generated_state_contract.md  gaugeflow_pretraining_roadmap_zh.md  hierarchical_symmetry_breaking_v1.md  method_update_and_dataset_usage_zh.md  paper_design_contract_v1.md  paper_s0_1_audit_amendment.md  research_iteration_history.md  stage_c_pretraining_status.md  stage_e_generated_lattice_diagnosis_sync_2026_07_24.md  vnext_execution_contract.md  vnext_protocol_amendment_q0_1.md
examples/: zero_tensor_orbit.json
reports/: data_quality_audit.md  (+30 more)
(+1493 files in other folders)
