[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaugeflow"
version = "0.1.0"
description = "Stabilizer-aware response-field flow for tensor-orbit conditioned crystal generation"
requires-python = ">=3.10"
dependencies = ["torch>=2.5", "torch-geometric>=2.5", "e3nn>=0.5", "pymatgen>=2023.8", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["mypy==1.16.1", "ruff==0.12.3", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["artifacts", "data", "outputs", "reports"]
include = [
  "src/gaugeflow/vnext/**/*.py",
  "src/gaugeflow/production/**/*.py",
  "scripts/freeze_vnext_legacy_evidence.py",
  "scripts/run_paper_s0_2_audit.py",
  "tests/test_vnext_*.py",
  "tests/test_paper_s0_production.py",
  "tests/test_paper_s0_2_scalability_symmetry.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
exclude = ["src/gaugeflow/(?!vnext/|production/).*\\.py$"]
