[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaugeflow"
version = "0.1.0"
description = "Stabilizer-aware response-field flow for tensor-orbit conditioned crystal generation"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.5",
  "torch-geometric>=2.5",
  "e3nn>=0.5",
  "pymatgen>=2023.8",
  "pandas>=2.0",
  "pyarrow>=22.0.0",
]

[project.optional-dependencies]
dev = ["mypy==1.16.1", "ruff==0.12.3", "pytest>=8"]
catalogue = [
  "spglib==2.7.0",
  "spgrep==0.6.0",
  "spgrep-modulation==0.3.0",
  "hsnf==0.4.0",
  "pyxtal==0.6.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["artifacts", "data", "outputs", "reports"]
include = [
  "src/gaugeflow/**/*.py",
  "scripts/*.py",
  "tests/*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
exclude = ["src/gaugeflow/(?!production/).*\\.py$"]
